# claude-with-amazon-bedrock-ejercicios

./: README.md
chat-prefill-stop/: README.md  pyproject.toml
chat-prefill-stop/src/claude_with_amazon_bedrock_ejercicio_chat_prefill_stop/: main.py
chat-streaming/: README.md  pyproject.toml
chat-streaming/src/claude_with_amazon_bedrock_ejercicio_chat_streaming/: main.py
eval-data-assets/: .gitignore  README.md  pyproject.toml
eval-data-assets/src/claude_with_amazon_bedrock_ejercicio_eval_data_assets/: main.py
eval-prompt-workflow/: .gitignore  README.md  pyproject.toml
eval-prompt-workflow/src/eval_prompt_workflow/: main.py
