[project]
name = "eval-prompt-workflow"
version = "0.1.0"
description = "LLM-as-a-judge prompt evaluation workflow using golden datasets"
authors = [
    {name = "Victor Cabello",email = "vmeca87@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ollama (>=0.6.1,<0.7.0)"
]

[tool.poetry]
packages = [{include = "eval_prompt_workflow", from = "src"}]

[tool.poetry.scripts]
eval = "eval_prompt_workflow.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
